--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "@material-ui/core": "^5.0.0-alpha.19",
+    "@material-ui/core": "^5.0.0-alpha.27",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.46",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
